fix: dynamic load with IntersectionObserver didn't work on mobile

--- a/src/7-components/NotesList/NotesList.scss
+++ b/src/7-components/NotesList/NotesList.scss
@@ -55,4 +55,9 @@ aside {
   &[data-filter]:empty::after {
     content: 'No results';
   }
+
+  &__end {
+    text-align: center;
+    padding: 8em 1em;
+  }
 }
